Make scores list mutable